<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_current_location"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/latitude"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/longitude"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latitude" />
    <TextView
        android:id="@+id/tv_countryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/country_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_longitude" />
    <TextView
        android:id="@+id/tv_Locality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/locality"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_countryName" />
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Locality" />
    <Button
        android:id="@+id/btn_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_my_current_location"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
 <EditText
        android:id="@+id/etSearchLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_8"
        android:background="@drawable/shape_search_round"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/spacing_8"
        android:fontFamily="@font/product_sans_regular"
        android:hint="@string/placeholder_search"
        android:textColor="@color/clr_text"
        android:textColorHint="@color/clr_text_hint"
        android:inputType="text"
        android:maxLines="1"
        android:minLines="1"
        android:paddingHorizontal="@dimen/spacing_16"
        android:paddingVertical="@dimen/spacing_8"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintTop_toBottomOf="@id/mdDivider" />
 binding.navMain.etSearchLog.addTextChangedListener(object : TextWatcher {
            override fun afterTextChanged(s: Editable?) {
                Logger.e(TAG, "afterTextChanged $s")
                globalSearchKey = s.toString()
                recentChatPage = 1
                recentCallPage = 1
                homeViewModel.getRecentCalls(globalSearchKey, recentCallPage)
                homeViewModel.getMessageLogs(globalSearchKey, recentChatPage)
            }

            override fun beforeTextChanged(
                s: CharSequence?,
                start: Int,
                count: Int,
                after: Int
            ) {
                Logger.e(TAG, "beforeTextChanged $s start $start count $count after $after")
            }

            override fun onTextChanged(
                s: CharSequence?,
                start: Int,
                before: Int,
                count: Int
            ) {
                Logger.e(
                    TAG,
                    "onTextChanged CharSequence $s start $start before $before count $count"
                )
            }
        })
    }
